# neo4j-api

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  BDD_SETUP_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  ISSUE_WORKFLOW_SETUP_COMPLETE.md  README.md  behave.ini  docker-compose.test.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: claude-code-review.yml  claude.yml  test.yml
app/: __init__.py  config.py  dependencies.py  main.py  models.py
app/routers/: __init__.py  health.py  nodes.py  query.py  schema.py  search.py
app/utils/: __init__.py  neo4j_client.py  validators.py
features/: README.md  authentication.feature  environment.py  health.feature  nodes.feature  query.feature  schema.feature  search.feature
features/fixtures/: test_data.json
features/schemas/: error_response_schema.json  node_response_schema.json  search_response_schema.json
features/steps/: auth_steps.py  common_steps.py  http_steps.py  neo4j_steps.py
fixtures/: README.md
issues/: 00-create-readme.md  04-config-module.md  08-api-key-dependency.md  09-fastapi-app-skeleton.md  10-health-check-endpoint.md  11-databases-list-endpoint.md  12-health-bdd-validation.md  13-query-models.md  14-query-endpoint-basic.md  15-query-validation-integration.md  16-query-bdd-validation.md  17-search-models.md  18-search-node-endpoint.md  19-search-edge-endpoint.md  20-search-bdd-validation.md  21-node-models.md  22-get-node-endpoint.md  23-expand-node-endpoint.md  24-count-endpoints.md  25-nodes-bdd-validation.md  26-schema-models.md  27-schema-node-types-endpoint.md  28-schema-edge-types-endpoint.md  29-schema-bdd-validation.md  30-auth-bdd-validation.md  31-full-bdd-suite.md  32-coverage-verification.md  33-caddyfile-config.md  34-systemd-service.md  35-deployment-docs.md  36-integration-tests-docker.md  P1.1-Query-Models.md  P1.2-Query-Endpoint-Basic.md  P1.5-Standardize-Error-Format.md  P1.6-Fix-Health-Response-Types.md  P2.1-Search-Models.md  P2.2-Search-Node-Endpoint.md  P2.3-Search-Edge-Endpoint.md  P2.4-Node-Models.md  P2.5-Get-Node-Endpoint.md  (+13 more)
issues/completed/: 01-create-env-example.md  02-setup-app-structure.md  03-setup-tests-structure.md  05-neo4j-client.md  06-query-validator.md  07-pydantic-models-base.md  08-api-key-dependency.md  10-health-check-endpoint.md  P0.0-Create-Readme.md  P0.1-Create-Env-Example.md  P0.10-Health-Check-Endpoint.md  P0.11-Databases-List-Endpoint.md  P0.2-Setup-App-Structure.md  P0.3-Setup-Tests-Structure.md  P0.4-Config-Module.md  P0.5-Neo4j-Client.md  P0.6-Query-Validator.md  P0.7-Pydantic-Models-Base.md  P0.8-API-Key-Dependency.md  P0.9-FastAPI-App-Skeleton.md  P1.2-Query-Endpoint-Basic.md  P1.3-Query-Validation-Integration.md  P1.4-Fix-Coverage-Config.md  P2.1-Search-Models.md  P2.2-Search-Node-Endpoint.md
issues/templates/: ticket-template.md
scripts/: pre-push.template  run_all_tests.sh  run_bdd_tests.sh  setup_hooks.sh
specs/: README.md  api-overview.md  authentication.md  data-models.md  endpoints-health.md  endpoints-nodes.md  endpoints-query.md  endpoints-schema.md  endpoints-search.md  error-handling.md
specs/examples/: README.md  databases-list.json  error-database-not-found.json  error-invalid-api-key.json  error-missing-api-key.json  error-neo4j-connection.json  error-node-not-found.json  error-query-syntax.json  error-query-timeout.json  error-server-error.json  error-validation-error.json  error-write-forbidden.json  health-check-failure.json  health-check-success.json  node-expand-request.json  node-expand-response.json  node-get-response.json  query-request-parameterized.json  query-request-simple.json  query-response-graph.json  query-response-scalar.json  schema-edge-types.json  schema-node-types.json  search-edge-request.json  search-edge-response.json  search-node-request.json  search-node-response.json
tests/: conftest.py  test_config.py  test_dependencies.py  test_health.py  test_main.py  test_models.py  test_neo4j_client.py  test_query.py  test_search.py  test_validators.py
tests/integration/: __init__.py  test_neo4j_connection.py
