[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-api"
version = "0.1.0"
description = "Linkurious-compatible REST API for Neo4j Enterprise multi-database instances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "neo4j>=5.23.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "behave>=1.2.6",
    "behave-html-formatter>=0.9.10",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "faker>=26.0.0",
    "freezegun>=1.5.1",
    "responses>=0.25.0",
    "pre-commit>=3.5.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "smoke: Smoke tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/features/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/__init__.py",
    "*/conftest.py",
    # Skeleton files - will be implemented in future issues
    "app/dependencies.py",
    "app/main.py",
    "app/models.py",
    "app/routers/*.py",
    "app/utils/validators.py",
]

# CRITICAL: 100% coverage required for all metrics
# Matches neo4j-finance strict quality standards
[tool.coverage.report]
fail_under = 100.0
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    "htmlcov",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "N",     # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (needed for pytest)
    "T201",  # print statements (allowed in scripts)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG"]  # Security and unused args OK in tests
"features/**/*.py" = ["S", "ARG", "T20"]  # BDD tests can be more permissive

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = [
    "^venv/",
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "faker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "freezegun.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "responses.*"
ignore_missing_imports = true
